--- a/RavenDrone/MDK/MDK.options.props
+++ b/RavenDrone/MDK/MDK.options.props
@@ -4,12 +4,12 @@
     <!-- 
     Contains basic settings that should be included in code repositories
     -->
-    <MDKVersion>1.4.7</MDKVersion>
+    <MDKVersion>1.4.12</MDKVersion>
     <MDKTrimTypes>
       <Enabled>yes</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
-      <Level>Full</Level>
+      <Level>None</Level>
     </MDKMinify>
     <MDKIgnore>
       <Folder>mdk</Folder>
